bug fixes
fixed icons not appearing in footer
fixed horizontal scroll in mobile view

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   margin-right: auto;
   margin-left: auto;
   background: var(--primary-color);
+overflow-x: hidden;
 }
 .row {
   display: flex;
